name:                ph
version:             0.1.0.0
synopsis:            Turbo-Batman
-- description:         
-- license:             
license-file:        LICENSE
author:              Arie Peterson
maintainer:          ariep@xs4all.nl
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >= 1.10

library
  exposed-modules:
    PH.Types,
    PH.Types.Dated,
    PH.Types.JSON,
    PH.Types.Labelled,
    PH.Types.Storage
  other-modules:
    Common
  build-depends:
    aeson >= 0.8 && < 0.10,
    base >= 4.7 && < 4.9,
    bytestring >= 0.10 && < 0.11,
    cereal >= 0.4 && < 0.5,
    containers >= 0.5 && < 0.6,
    generic-aeson >= 0.2 && < 0.3,
    json-schema >= 0.7 && < 0.8,
    lens >= 4.7 && < 4.13,
    mtl >= 2.2 && < 2.3,
    pandoc >= 1.13 && < 1.16,
    safecopy >= 0.8 && < 0.9,
    stm >= 2.4 && < 2.5,
    TCache >= 0.14 && < 0.15,
    text >= 1.2 && < 1.3,
    time >= 1.4 && < 1.6,
    transformers >= 0.4 && < 0.5
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:
    OverloadedStrings,
    DeriveGeneric,
    DeriveDataTypeable,
    ScopedTypeVariables,
    TypeFamilies

executable rest
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:
    acid-state >= 0.13 && < 0.14,
    aeson >= 0.8 && < 0.10,
    base >= 4.7 && < 4.9,
    bytestring >= 0.10 && < 0.11,
    cereal >= 0.4 && < 0.5,
    console-program >= 0.4.0.3 && < 0.5,
    containers >= 0.5 && < 0.6,
    directory >= 1.2 && < 1.3,
    exceptions >= 0.8 && < 0.9,
    generic-aeson >= 0.2 && < 0.3,
    happstack-server >= 7.4 && < 7.5,
    heredoc >= 0.2 && < 0.3,
    hoauth2 >= 0.4.8 && < 0.5,
    http-conduit >= 2.1 && < 2.2,
    json-schema >= 0.7 && < 0.8,
    lens >= 4.7 && < 4.13,
    mtl >= 2.2 && < 2.3,
    network-uri >= 2.6 && < 2.7,
    pandoc >= 1.13 && < 1.16,
    pandoc-types >= 1.12 && < 1.13,
    path-pieces >= 0.2 && < 0.3,
    ph,
    random >= 1.1 && < 1.2,
    rest-core >= 0.35 && < 0.37,
    rest-happstack >= 0.3.1 && < 0.4,
    safecopy >= 0.8 && < 0.9,
    serversession >= 1.0.1 && < 1.1,
    serversession-backend-acid-state >= 1.0.2 && < 1.1,
    stm >= 2.4 && < 2.5,
    TCache >= 0.14 && < 0.15,
    text >= 1.2 && < 1.3,
    time >= 1.4 && < 1.6,
    transformers >= 0.4 && < 0.5
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:
    OverloadedStrings,
    DeriveGeneric,
    DeriveDataTypeable,
    ScopedTypeVariables,
    TypeFamilies

executable cli
  main-is:             CLI.hs
  ghc-options:         -main-is CLI
  -- other-modules:       
  -- other-extensions:    
  build-depends:
    aeson >= 0.8 && < 0.10,
    base >= 4.7 && < 4.9,
    bytestring >= 0.10 && < 0.11,
    cereal >= 0.4 && < 0.5,
    console-program >= 0.4 && < 0.5,
    containers >= 0.5 && < 0.6,
    directory >= 1.2 && < 1.3,
    generic-aeson >= 0.2 && < 0.3,
    json-schema >= 0.7 && < 0.8,
    lens >= 4.7 && < 4.13,
    mtl >= 2.2 && < 2.3,
    pandoc >= 1.13 && < 1.16,
    ph,
    random-shuffle >= 0.0 && < 0.1,
    rest-core >= 0.35 && < 0.37,
    rest-gen >= 0.17 && < 0.18,
    safecopy >= 0.8 && < 0.9,
    stm >= 2.4 && < 2.5,
    TCache >= 0.14 && < 0.15,
    text >= 1.2 && < 1.3,
    time >= 1.4 && < 1.6,
    transformers >= 0.4 && < 0.5
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:
    OverloadedStrings,
    DeriveGeneric,
    DeriveDataTypeable,
    ScopedTypeVariables
