name:                ph
version:             0.1.0.0
synopsis:            Turbo-Batman
-- description:         
-- license:             
license-file:        LICENSE
author:              Arie Peterson
maintainer:          ariep@xs4all.nl
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >= 1.10

library
  exposed-modules:
    PH.Types,
    PH.Types.JSON
  other-modules:
    Common
  build-depends:
    aeson >= 0.8 && < 0.9,
    base >= 4.7 && < 4.8,
    generic-aeson >= 0.2 && < 0.3,
    happstack-server >= 7.4 && < 7.5,
    json-schema >= 0.7 && < 0.8,
    mtl >= 2.2 && < 2.3,
    rest-core >= 0.35 && < 0.36,
    stm >= 2.4 && < 2.5,
    TCache >= 0.13 && < 0.14,
    text >= 1.2 && < 1.3,
    transformers >= 0.4 && < 0.5
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:
    OverloadedStrings,
    DeriveGeneric,
    DeriveDataTypeable,
    ScopedTypeVariables

executable rest
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:
    aeson >= 0.8 && < 0.9,
    base >= 4.7 && < 4.8,
    bytestring >= 0.10 && < 0.11,
    generic-aeson >= 0.2 && < 0.3,
    happstack-server >= 7.4 && < 7.5,
    heredoc >= 0.2 && < 0.3,
    json-schema >= 0.7 && < 0.8,
    mtl >= 2.2 && < 2.3,
    pandoc >= 1.13 && < 1.14,
    pandoc-types >= 1.12 && < 1.13,
    ph,
    rest-core >= 0.35 && < 0.36,
    rest-happstack >= 0.2 && < 0.3,
    stm >= 2.4 && < 2.5,
    TCache >= 0.13 && < 0.14,
    text >= 1.2 && < 1.3,
    transformers >= 0.4 && < 0.5
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:
    OverloadedStrings,
    DeriveGeneric,
    DeriveDataTypeable,
    ScopedTypeVariables

executable generate
  main-is:             Generate.hs
  ghc-options:            -main-is Generate
  -- other-modules:       
  -- other-extensions:    
  build-depends:
    aeson >= 0.8 && < 0.9,
    base >= 4.7 && < 4.8,
    bytestring >= 0.10 && < 0.11,
    generic-aeson >= 0.2 && < 0.3,
    heredoc >= 0.2 && < 0.3,
    json-schema >= 0.7 && < 0.8,
    mtl >= 2.2 && < 2.3,
    pandoc >= 1.13 && < 1.14,
    pandoc-types >= 1.12 && < 1.13,
    ph,
    rest-core >= 0.35 && < 0.36,
    rest-gen >= 0.17 && < 0.18,
    stm >= 2.4 && < 2.5,
    TCache >= 0.13 && < 0.14,
    text >= 1.2 && < 1.3,
    transformers >= 0.4 && < 0.5
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:
    OverloadedStrings,
    DeriveGeneric,
    DeriveDataTypeable,
    ScopedTypeVariables

executable db
  main-is:             DB.hs
  ghc-options:            -main-is DB
  -- other-modules:       
  -- other-extensions:    
  build-depends:
    aeson >= 0.8 && < 0.9,
    base >= 4.7 && < 4.8,
    console-program >= 0.3.2 && < 0.4,
    containers >= 0.5 && < 0.6,
    generic-aeson >= 0.2 && < 0.3,
    json-schema >= 0.7 && < 0.8,
    mtl >= 2.2 && < 2.3,
    ph,
    rest-core >= 0.35 && < 0.36,
    rest-gen >= 0.17 && < 0.18,
    stm >= 2.4 && < 2.5,
    TCache >= 0.13 && < 0.14,
    text >= 1.2 && < 1.3,
    transformers >= 0.4 && < 0.5
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:
    OverloadedStrings,
    DeriveGeneric,
    DeriveDataTypeable,
    ScopedTypeVariables
